[package]
name = "rsnano-message-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnano_core = { git = "https://github.com/simpago/rsnano-node.git", rev = "f50bfb8" }
rsnano_messages = { git = "https://github.com/simpago/rsnano-node.git", rev = "f50bfb8" }
