[package]
name = "rsnano-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
etherparse = "0.13.0"
pcap-parser = "0.14.1"
rsnano_core = { git = "https://github.com/simpago/rsnano-node.git", rev = "f50bfb8" }
rsnano_messages = { git = "https://github.com/simpago/rsnano-node.git", rev = "f50bfb8" }
